--- a/index.html
+++ b/index.html
@@ -2,22 +2,224 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>IT Ops Task Generator</title>
+  <title>IT Ops Task Generator (Realtime)</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Firebase -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import { getDatabase, ref, set, onValue, update, remove } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js";
+
+    // --- Firebase Config (yours) ---
+    const firebaseConfig = {
+      apiKey: "AIzaSyC56asNTd04xhDU4OlnBHS4zNxj_aiiFhM",
+      authDomain: "activity-log-275ce.firebaseapp.com",
+      databaseURL: "https://activity-log-275ce-default-rtdb.asia-southeast1.firebasedatabase.app",
+      projectId: "activity-log-275ce",
+      storageBucket: "activity-log-275ce.firebasestorage.app",
+      messagingSenderId: "436390670385",
+      appId: "1:436390670385:web:a4e4bf77c32d4061c76510"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+
+    // --- Members ---
+    const members = {
+      "IRO": "Ian Romero",
+      "RDE": "Rhizza De Guzman",
+      "FFA": "Felix Factor",
+      "NLA": "Nathan Lapena",
+      "MAG": "Michael Henry Aglubat",
+      "JMA": "Jelyn Malubay"
+    };
+
+    let taskPool = [
+      "PW", "ARC", "Loglogic", "TM1Top", "ISMS", "CRITICAL",
+      "PROXY", "HO", "EMEA Ticket", "TO", "Remind AX"
+    ];
+
+    // --- DAILY TASKS ---
+    function renderDailyTasks() {
+      const container = document.getElementById("dailyTasksList");
+      container.innerHTML = "";
+      taskPool.forEach(task => {
+        const row = document.createElement("div");
+        row.className = "flex items-center space-x-2";
+
+        const checkbox = document.createElement("input");
+        checkbox.type = "checkbox";
+        checkbox.className = "form-checkbox";
+        checkbox.dataset.task = task;
+        checkbox.onchange = () => saveDailyTask(task, checkbox.checked);
+
+        const label = document.createElement("span");
+        label.textContent = task;
+
+        const dropdown = document.createElement("select");
+        dropdown.className = "border rounded-lg p-1";
+        dropdown.dataset.task = task;
+        dropdown.innerHTML = `<option value="">-- Select Member --</option>` +
+          Object.entries(members).map(([k,v]) => `<option value="${k}">${k} (${v})</option>`).join("");
+        dropdown.onchange = () => saveDailyTask(task, checkbox.checked, dropdown.value);
+
+        row.appendChild(checkbox);
+        row.appendChild(label);
+        row.appendChild(dropdown);
+        container.appendChild(row);
+      });
+    }
+
+    function saveDailyTask(task, checked, member="") {
+      update(ref(db, "dailyTasks/" + task), {
+        checked: checked,
+        member: member || ""
+      });
+    }
+
+    function listenDailyTasks() {
+      onValue(ref(db, "dailyTasks"), snapshot => {
+        const data = snapshot.val() || {};
+        document.querySelectorAll("#dailyTasksList div").forEach(row => {
+          const cb = row.querySelector("input[type=checkbox]");
+          const dd = row.querySelector("select");
+          const t = cb.dataset.task;
+          if (data[t]) {
+            cb.checked = data[t].checked;
+            dd.value = data[t].member || "";
+          }
+        });
+      });
+    }
+
+    // --- WEEKLY & MONTHLY ---
+    function saveWeeklyMonthly() {
+      update(ref(db), {
+        weekly: document.getElementById("weeklyTasks").value,
+        monthly: document.getElementById("monthlyTasks").value
+      });
+    }
+
+    function listenWeeklyMonthly() {
+      onValue(ref(db), snapshot => {
+        const data = snapshot.val() || {};
+        document.getElementById("weeklyTasks").value = data.weekly || "";
+        document.getElementById("monthlyTasks").value = data.monthly || "";
+      });
+    }
+
+    // --- MONITORING ---
+    function saveMonitoring(slot, member) {
+      update(ref(db, "monitoring/" + slot), { member });
+    }
+
+    function listenMonitoring() {
+      onValue(ref(db, "monitoring"), snapshot => {
+        const data = snapshot.val() || {};
+        document.querySelectorAll("#autoMonitoringSlots select, #manualMonitoringSlots select").forEach(sel => {
+          if (data[sel.dataset.slot]) {
+            sel.value = data[sel.dataset.slot].member || "";
+          }
+        });
+      });
+    }
+
+    // Generate auto monitoring slots
+    function generateMonitoring() {
+      const start = document.getElementById("startTime").value;
+      const end = document.getElementById("endTime").value;
+      const count = parseInt(document.getElementById("teamCount").value);
+      const slotsDiv = document.getElementById("autoMonitoringSlots");
+      slotsDiv.innerHTML = "";
+
+      const [sh,sm] = start.split(":"), [eh,em] = end.split(":");
+      let cur = new Date(); cur.setHours(sh,sm);
+      let endDate = new Date(); endDate.setHours(eh,em);
+      const total = (endDate - cur) / 60000;
+      const slotMins = total / count;
+
+      for (let i=0;i<count;i++) {
+        let s = new Date(cur);
+        cur.setMinutes(cur.getMinutes()+slotMins);
+        let e = new Date(cur);
+        const slotLabel = `${formatTime(s)} - ${formatTime(e)}`;
+
+        const row = document.createElement("div");
+        row.className = "flex items-center space-x-2";
+        const label = document.createElement("span");
+        label.textContent = slotLabel;
+
+        const dropdown = document.createElement("select");
+        dropdown.className = "border rounded-lg p-1";
+        dropdown.dataset.slot = slotLabel;
+        dropdown.innerHTML = `<option value="">-- Select Member --</option>` +
+          Object.entries(members).map(([k,v]) => `<option value="${k}">${k} (${v})</option>`).join("");
+        dropdown.onchange = () => saveMonitoring(slotLabel, dropdown.value);
+
+        row.appendChild(label);
+        row.appendChild(dropdown);
+        slotsDiv.appendChild(row);
+      }
+    }
+
+    function formatTime(date) {
+      let h = date.getHours(), m = date.getMinutes();
+      const ampm = h >= 12 ? "PM" : "AM";
+      h = h % 12 || 12;
+      return h + ":" + (m<10?"0":"") + m + " " + ampm;
+    }
+
+    // Manual monitoring
+    function generateManualMonitoring() {
+      const slots = document.getElementById("manualMonitoring").value.split("\n").map(s=>s.trim()).filter(s=>s);
+      const container = document.getElementById("manualMonitoringSlots");
+      container.innerHTML = "";
+      slots.forEach(slot => {
+        const row = document.createElement("div");
+        row.className = "flex items-center space-x-2";
+        const label = document.createElement("span");
+        label.textContent = slot;
+        const dropdown = document.createElement("select");
+        dropdown.className = "border rounded-lg p-1";
+        dropdown.dataset.slot = slot;
+        dropdown.innerHTML = `<option value="">-- Select Member --</option>` +
+          Object.entries(members).map(([k,v]) => `<option value="${k}">${k} (${v})</option>`).join("");
+        dropdown.onchange = () => saveMonitoring(slot, dropdown.value);
+        row.appendChild(label);
+        row.appendChild(dropdown);
+        container.appendChild(row);
+      });
+    }
+
+    // --- RESET ---
+    function resetAll() {
+      if (confirm("Reset everything for new day?")) {
+        remove(ref(db, "dailyTasks"));
+        remove(ref(db, "monitoring"));
+        update(ref(db), { weekly: "", monthly: "" });
+      }
+    }
+
+    // --- Init ---
+    window.addEventListener("DOMContentLoaded", () => {
+      renderDailyTasks();
+      listenDailyTasks();
+      listenWeeklyMonthly();
+      listenMonitoring();
+
+      document.getElementById("weeklyTasks").addEventListener("input", saveWeeklyMonthly);
+      document.getElementById("monthlyTasks").addEventListener("input", saveWeeklyMonthly);
+      document.getElementById("resetBtn").addEventListener("click", resetAll);
+    });
+  </script>
 </head>
 <body class="bg-gray-100 min-h-screen p-6">
   <div class="max-w-5xl mx-auto bg-white shadow-xl rounded-2xl p-6">
-    <h1 class="text-2xl font-bold text-center mb-6">IT Ops Task Generator</h1>
+    <h1 class="text-2xl font-bold text-center mb-6">IT Ops Task Generator (Realtime)</h1>
 
     <!-- Daily Tasks -->
     <div class="mb-6 p-4 border rounded-xl shadow-sm">
       <h2 class="text-xl font-semibold mb-3 text-blue-700">Daily Tasks</h2>
       <div id="dailyTasksList" class="space-y-2"></div>
-      <button onclick="toggleEditTasks()" class="mt-3 px-4 py-2 bg-gray-200 rounded-lg">Edit Task Pool</button>
-      <div id="editTasksSection" class="mt-3 hidden">
-        <textarea id="editTasksArea" rows="6" class="w-full border rounded-lg p-2"></textarea>
-        <button onclick="saveTasks()" class="mt-2 px-4 py-2 bg-blue-600 text-white rounded-lg">Save Task Pool</button>
-      </div>
     </div>
 
     <!-- Weekly Tasks -->
@@ -61,263 +263,16 @@
 
     <!-- Buttons -->
     <div class="text-center mb-6 space-x-4">
-      <button onclick="generateOutput()" class="px-6 py-3 bg-blue-600 text-white rounded-xl shadow-lg hover:bg-blue-700">Generate Output</button>
-      <button onclick="resetAll()" class="px-6 py-3 bg-red-500 text-white rounded-xl shadow-lg hover:bg-red-600">Reset All</button>
-    </div>
-
-    <!-- Output -->
-    <div class="p-4 border rounded-xl shadow-sm bg-gray-50">
-      <h2 class="text-xl font-semibold mb-3">Generated Output</h2>
-      <pre id="output" class="whitespace-pre-wrap"></pre>
+      <button id="resetBtn" class="px-6 py-3 bg-red-500 text-white rounded-xl shadow-lg hover:bg-red-600">Reset All</button>
     </div>
   </div>
 
 <script>
-  const STORAGE_KEY = "itops-task-generator";
-
-  const members = {
-    "IRO": "Ian Romero",
-    "RDE": "Rhizza De Guzman",
-    "FFA": "Felix Factor",
-    "NLA": "Nathan Lapena",
-    "MAG": "Michael Henry Aglubat",
-    "JMA": "Jelyn Malubay"
-  };
-
-  let taskPool = [
-    "PW", "ARC", "Loglogic", "TM1Top", "ISMS", "CRITICAL",
-    "PROXY", "HO", "EMEA Ticket", "TO", "Remind AX"
-  ];
-
-  // --- Persistence ---
-  function saveState() {
-    const state = {
-      tasks: [],
-      weekly: document.getElementById("weeklyTasks").value,
-      monthly: document.getElementById("monthlyTasks").value,
-      monitoringMode: document.getElementById("monitoringMode").value,
-      manualSlots: document.getElementById("manualMonitoring").value
-    };
-
-    document.querySelectorAll("#dailyTasksList div").forEach(row => {
-      const cb = row.querySelector("input[type=checkbox]");
-      const dd = row.querySelector("select");
-      state.tasks.push({task: cb.dataset.task, checked: cb.checked, member: dd.value});
-    });
-
-    if (state.monitoringMode === "auto") {
-      state.autoSlots = [];
-      document.querySelectorAll("#autoMonitoringSlots select").forEach(sel => {
-        state.autoSlots.push({slot: sel.dataset.slot, member: sel.value});
-      });
-    } else {
-      state.manualAssigned = [];
-      document.querySelectorAll("#manualMonitoringSlots select").forEach(sel => {
-        state.manualAssigned.push({slot: sel.dataset.slot, member: sel.value});
-      });
-    }
-
-    localStorage.setItem(STORAGE_KEY, JSON.stringify(state));
-  }
-
-  function loadState() {
-    const raw = localStorage.getItem(STORAGE_KEY);
-    if (!raw) return;
-    const state = JSON.parse(raw);
-
-    document.getElementById("weeklyTasks").value = state.weekly || "";
-    document.getElementById("monthlyTasks").value = state.monthly || "";
-    document.getElementById("monitoringMode").value = state.monitoringMode || "auto";
-    toggleMonitoringMode();
-
-    renderDailyTasks(state.tasks);
-
-    if (state.monitoringMode === "auto" && state.autoSlots) {
-      generateMonitoring();
-      setTimeout(()=>{
-        document.querySelectorAll("#autoMonitoringSlots select").forEach((sel,i)=>{
-          if (state.autoSlots[i]) sel.value = state.autoSlots[i].member;
-        });
-      },100);
-    } else if (state.monitoringMode === "manual") {
-      document.getElementById("manualMonitoring").value = state.manualSlots || "";
-      generateManualMonitoring();
-      setTimeout(()=>{
-        document.querySelectorAll("#manualMonitoringSlots select").forEach((sel,i)=>{
-          if (state.manualAssigned[i]) sel.value = state.manualAssigned[i].member;
-        });
-      },100);
-    }
-  }
-
-  // --- Daily Tasks ---
-  function renderDailyTasks(saved=[]) {
-    const container = document.getElementById("dailyTasksList");
-    container.innerHTML = "";
-    taskPool.forEach(task => {
-      const row = document.createElement("div");
-      row.className = "flex items-center space-x-2";
-
-      const checkbox = document.createElement("input");
-      checkbox.type = "checkbox";
-      checkbox.className = "form-checkbox";
-      checkbox.dataset.task = task;
-      checkbox.onchange = saveState;
-
-      const label = document.createElement("span");
-      label.textContent = task;
-
-      const dropdown = document.createElement("select");
-      dropdown.className = "border rounded-lg p-1";
-      dropdown.dataset.task = task;
-      dropdown.innerHTML = `<option value="">-- Select Member --</option>` +
-        Object.entries(members).map(([k,v]) => `<option value="${k}">${k} (${v})</option>`).join("");
-      dropdown.onchange = saveState;
-
-      const savedTask = saved.find(t=>t.task===task);
-      if (savedTask) {
-        checkbox.checked = savedTask.checked;
-        dropdown.value = savedTask.member;
-      }
-
-      row.appendChild(checkbox);
-      row.appendChild(label);
-      row.appendChild(dropdown);
-      container.appendChild(row);
-    });
-  }
-
-  function toggleEditTasks() {
-    document.getElementById("editTasksArea").value = taskPool.join("\n");
-    document.getElementById("editTasksSection").classList.toggle("hidden");
-  }
-
-  function saveTasks() {
-    const newTasks = document.getElementById("editTasksArea").value.split("\n").map(t => t.trim()).filter(t => t);
-    if (newTasks.length) taskPool = newTasks;
-    renderDailyTasks();
-    document.getElementById("editTasksSection").classList.add("hidden");
-    saveState();
-  }
-
-  // --- Monitoring ---
   function toggleMonitoringMode() {
     const mode = document.getElementById("monitoringMode").value;
     document.getElementById("autoDivideSection").classList.toggle("hidden", mode !== "auto");
     document.getElementById("manualSection").classList.toggle("hidden", mode !== "manual");
-    saveState();
   }
-
-  function formatTime(date) {
-    let h = date.getHours(), m = date.getMinutes();
-    const ampm = h >= 12 ? "PM" : "AM";
-    h = h % 12 || 12;
-    return h + ":" + (m<10?"0":"") + m + " " + ampm;
-  }
-
-  function generateMonitoring() {
-    const start = document.getElementById("startTime").value;
-    const end = document.getElementById("endTime").value;
-    const count = parseInt(document.getElementById("teamCount").value);
-    const slotsDiv = document.getElementById("autoMonitoringSlots");
-    slotsDiv.innerHTML = "";
-    const [sh,sm] = start.split(":"), [eh,em] = end.split(":");
-    let cur = new Date(); cur.setHours(sh,sm);
-    let endDate = new Date(); endDate.setHours(eh,em);
-    const total = (endDate - cur) / 60000;
-    const slotMins = total / count;
-    for (let i=0;i<count;i++) {
-      let s = new Date(cur);
-      cur.setMinutes(cur.getMinutes()+slotMins);
-      let e = new Date(cur);
-      const row = document.createElement("div");
-      row.className = "flex items-center space-x-2";
-      const label = document.createElement("span");
-      label.textContent = `${formatTime(s)} - ${formatTime(e)}`;
-      const dropdown = document.createElement("select");
-      dropdown.className = "border rounded-lg p-1";
-      dropdown.dataset.slot = `${formatTime(s)} - ${formatTime(e)}`;
-      dropdown.innerHTML = `<option value="">-- Select Member --</option>` +
-        Object.entries(members).map(([k,v]) => `<option value="${k}">${k} (${v})</option>`).join("");
-      dropdown.onchange = saveState;
-      row.appendChild(label);
-      row.appendChild(dropdown);
-      slotsDiv.appendChild(row);
-    }
-    saveState();
-  }
-
-  function generateManualMonitoring() {
-    const slots = document.getElementById("manualMonitoring").value.split("\n").map(s=>s.trim()).filter(s=>s);
-    const container = document.getElementById("manualMonitoringSlots");
-    container.innerHTML = "";
-    slots.forEach(slot => {
-      const row = document.createElement("div");
-      row.className = "flex items-center space-x-2";
-      const label = document.createElement("span");
-      label.textContent = slot;
-      const dropdown = document.createElement("select");
-      dropdown.className = "border rounded-lg p-1";
-      dropdown.dataset.slot = slot;
-      dropdown.innerHTML = `<option value="">-- Select Member --</option>` +
-        Object.entries(members).map(([k,v]) => `<option value="${k}">${k} (${v})</option>`).join("");
-      dropdown.onchange = saveState;
-      row.appendChild(label);
-      row.appendChild(dropdown);
-      container.appendChild(row);
-    });
-    saveState();
-  }
-
-  // --- Output ---
-  function generateOutput() {
-    let out = "Date: " + new Date().toISOString().slice(0,10) + "\n\n";
-
-    out += "DAILY TASKS:\n";
-    document.querySelectorAll("#dailyTasksList div").forEach(row => {
-      const cb = row.querySelector("input[type=checkbox]");
-      const dd = row.querySelector("select");
-      if (cb.checked && dd.value) {
-        out += `- ${cb.dataset.task} — ${dd.value} (${members[dd.value]})\n`;
-      }
-    });
-    out += "\nWEEKLY TASKS:\n" + (document.getElementById("weeklyTasks").value.trim()||"(None)") + "\n\n";
-    out += "MONTHLY TASKS:\n" + (document.getElementById("monthlyTasks").value.trim()||"(None)") + "\n\n";
-    out += "MONITORING:\n";
-    if (document.getElementById("monitoringMode").value==="manual") {
-      document.querySelectorAll("#manualMonitoringSlots select").forEach(sel=>{
-        if (sel.value) out += `- ${sel.dataset.slot} — ${sel.value} (${members[sel.value]})\n`;
-      });
-    } else {
-      document.querySelectorAll("#autoMonitoringSlots select").forEach(sel=>{
-        if (sel.value) out += `- ${sel.dataset.slot} — ${sel.value} (${members[sel.value]})\n`;
-      });
-    }
-
-    document.getElementById("output").textContent = out;
-    saveState();
-  }
-
-  // --- Reset All ---
-  function resetAll() {
-    if (confirm("Are you sure you want to reset all tasks for a new day?")) {
-      localStorage.removeItem(STORAGE_KEY);
-      document.getElementById("weeklyTasks").value = "";
-      document.getElementById("monthlyTasks").value = "";
-      document.getElementById("manualMonitoring").value = "";
-      renderDailyTasks();
-      document.getElementById("autoMonitoringSlots").innerHTML = "";
-      document.getElementById("manualMonitoringSlots").innerHTML = "";
-      document.getElementById("output").textContent = "";
-    }
-  }
-
-  // Init
-  renderDailyTasks();
-  loadState();
-  document.getElementById("weeklyTasks").addEventListener("input", saveState);
-  document.getElementById("monthlyTasks").addEventListener("input", saveState);
-  document.getElementById("manualMonitoring").addEventListener("input", saveState);
 </script>
 </body>
 </html>
